logs/dag_id=sales_datawarehouse/run_id=manual__2022-10-24T220955.034950+0000/task_id=truncate_database/attempt=2.log
[2022-10-24T22:19:11.463+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: sales_datawarehouse.truncate_database manual__2022-10-24T22:09:55.034950+00:00 [queued]>
[2022-10-24T22:19:11.485+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: sales_datawarehouse.truncate_database manual__2022-10-24T22:09:55.034950+00:00 [queued]>
[2022-10-24T22:19:11.487+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2022-10-24T22:19:11.488+0000] {taskinstance.py:1363} INFO - Starting attempt 2 of 3
[2022-10-24T22:19:11.489+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2022-10-24T22:19:11.513+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): truncate_database> on 2022-10-24 22:09:55.034950+00:00
[2022-10-24T22:19:11.520+0000] {standard_task_runner.py:54} INFO - Started process 24609 to run task
[2022-10-24T22:19:11.524+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'sales_datawarehouse', 'truncate_database', 'manual__2022-10-24T22:09:55.034950+00:00', '--job-id', '442', '--raw', '--subdir', 'DAGS_FOLDER/sales_dw.py', '--cfg-path', '/tmp/tmpzdx742ku']
[2022-10-24T22:19:11.526+0000] {standard_task_runner.py:83} INFO - Job 442: Subtask truncate_database
[2022-10-24T22:19:11.528+0000] {dagbag.py:525} INFO - Filling up the DagBag from /opt/***/dags/sales_dw.py
[2022-10-24T22:19:11.545+0000] {dagbag.py:330} ERROR - Failed to import: /opt/***/dags/sales_dw.py
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/dagbag.py", line 326, in parse
    loader.exec_module(new_module)
  File "<frozen importlib._bootstrap_external>", line 724, in exec_module
  File "<frozen importlib._bootstrap_external>", line 860, in get_code
  File "<frozen importlib._bootstrap_external>", line 791, in source_to_code
  File "<frozen importlib._bootstrap>", line 219, in _call_with_frames_removed
  File "/opt/airflow/dags/sales_dw.py", line 142
    '''
    ^
IndentationError: unexpected indent
[2022-10-24T22:19:11.548+0000] {standard_task_runner.py:107} ERROR - Failed to execute job 442 for task truncate_database (Dag 'sales_datawarehouse' could not be found; either it does not exist or it failed to parse.; 24609)
[2022-10-24T22:19:11.576+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2022-10-24T22:19:11.606+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
